// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs.Item renders correctly 1`] = `
<li
  aria-current={null}
  className="c-breadcrumbs__crumb"
>
  <a
    href="#"
  >
    lorem
  </a>
</li>
`;

exports[`Breadcrumbs.Item renders correctly an active Item 1`] = `
<li
  aria-current="page"
  className="c-breadcrumbs__crumb"
>
  lorem
</li>
`;
